--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "socialprofile",
   "version": "1.0.0",
   "description": "A simple node module to practise MongoDb association with a socia media platform app",
-  "main": "server.js",
+  "main": "build/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && node build/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "nodemon build/server.js"
   },
   "repository": {
     "type": "git",
@@ -17,11 +19,16 @@
   },
   "homepage": "https://github.com/RamuMakkena/socialprofile#readme",
   "dependencies": {
-    "dateformat": "^5.0.3",
     "express": "^4.18.1",
     "mongoose": "^6.3.6"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "@types/dateformat": "^5.0.0",
+    "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^17.0.42",
+    "nodemon": "^2.0.16",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.3"
   }
 }
